--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
+    "@web3modal/ethers": "^4.0.5",
+    "ethers": "^6.11.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
