--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web3modal/ethers": "^4.0.5",
-    "ethers": "^6.11.0",
+    "@metamask/detect-provider": "^2.0.0",
+    "ethers": "^5.7.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
